--- a/click-app/package.json
+++ b/click-app/package.json
@@ -7,7 +7,10 @@
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
+  "homepage": "https://ericlamacchia.github.io/clickygame/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
